Bug 391200 - Don't allow the user to set a custom icon for the trash (it doesn't work, so let's not torture them)
Summary: Don't allow the user to set a custom icon for the trash (it doesn't work, so ...
Status: RESOLVED FIXED
Alias: None
Product: frameworks-kio
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Gentoo Packages Linux
: NOR normal
Target Milestone: ---
Assignee: David Faure
URL:
Keywords: junior-jobs
Depends on:
Blocks:
 
Reported: 2018-02-28 00:48 UTC by Zakhar
Modified: 2018-08-04 23:12 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: Dolphin fixed in KDE Applications 18.08.0 | Other KDE apps fixed in KDE Frameworks 5.49
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Zakhar 2018-02-28 00:48:32 UTC
Dolphins side panel location item "Trash" does not permit icon to be changed. What happens is if the icon is changed and then dolphin is closed, the changed icon reverts to whatever icon it was previously before the change.
Comment 1 Nate Graham 2018-02-28 05:04:22 UTC
I guess technically this is a bug, because whatever logic conditionally changes the icon to reflect full/empty status doesn't take into account a custom icon. But I'm unsure how it could possible be fixed without adding a new UI  to allow users to select both the full and empty icons, which seems like an awful lot of work for almost no gain.
Comment 2 Zakhar 2018-02-28 05:20:32 UTC
Gotta have customizability. Otherwise just remove the custom icon UI for trash.
Comment 3 Nate Graham 2018-02-28 18:43:04 UTC
Yep, this is more or less hard-coded right now. See https://phabricator.kde.org/D10684

I think it's soo much of a can of worms to make both icons user-overridable (themes still override them, of course). Let's remove the ability to override the icon so users won't be tempted to try.
Comment 4 Christoph Feck 2018-08-02 12:09:01 UTC
Git commit aa9b63b45105e696c913ae1c2bb8c28bb2b47d39 by Christoph Feck, on behalf of Shubham Jangra.
Committed on 02/08/2018 at 12:05.
Pushed by cfeck into branch 'master'.

Remove custom icon selection for trash

Trash can display two icons, representing its full and
empty states, and it is simpler to make these icons non-editable
rather than to provide an interface to edit them both.
FIXED-IN: 5.49.0

Differential Revision: https://phabricator.kde.org/D14360

M  +23   -15   src/filewidgets/kfileplaceeditdialog.cpp
M  +7    -0    src/filewidgets/kfileplaceeditdialog.h

https://commits.kde.org/kio/aa9b63b45105e696c913ae1c2bb8c28bb2b47d39
Comment 5 Nate Graham 2018-08-04 23:07:56 UTC
Git commit 6e04f50081a92e5958cbba4c5292a8f5a10f51b4 by Nathaniel Graham, on behalf of Shubham Jangra.
Committed on 04/08/2018 at 23:02.
Pushed by ngraham into branch 'Applications/18.08'.

Remove custom icon selection for trash

Summary: CCBUG:  391200

Test Plan:
1. Open Dolphin
2. Edit trash in places item
Result: No custom icon option available

Reviewers: ngraham, #dolphin, broulik, pino, elvisangelaccio, cfeck

Reviewed By: ngraham, #dolphin, elvisangelaccio, cfeck

Subscribers: rkflx, cfeck, elvisangelaccio, pino, kfm-devel

Tags: #dolphin

Differential Revision: https://phabricator.kde.org/D14378

M  +12   -10   src/panels/places/placesitemeditdialog.cpp

https://commits.kde.org/dolphin/6e04f50081a92e5958cbba4c5292a8f5a10f51b4