Remove custom icon selection for trash

Trash can display two icons, representing its full and
empty states, and it is simpler to make these icons non-editable
rather than to provide an interface to edit them both.

BUG: 391200
FIXED-IN: 5.49.0

Differential Revision: https://phabricator.kde.org/D14360